deploy: 23c41dd643a77a64240cb1c062c5608de1de70ff

--- a/genai-amep/3/appendix/appendix.html
+++ b/genai-amep/3/appendix/appendix.html
@@ -45,22 +45,10 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="../chapter1/index.html">Model Preparation</a>
+    <a class="nav-link" href="../chapter1/index.html">Platform Preparation</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../chapter1/architecture.html">Downloading Models from HuggingFace</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../chapter1/multilang-evaluation.html">Model Compression</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <span class="nav-text">xref:section1.adoc</span>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <span class="nav-text">xref:section2.adoc</span>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <span class="nav-text">xref:section3.adoc</span>
+    <span class="nav-text">xref:instrastructure-setup.adoc</span>
   </li>
 </ul>
   </li>
@@ -76,7 +64,7 @@
     <a class="nav-link" href="../chapter2/deployment-overview.html">Deployment Overview</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../chapter2/infrastructure-setup.html">Infrastructure Setup</a>
+    <a class="nav-link" href="#infrastructure-setup.adoc">Infrastructure Setup</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter2/modelcar-pipeline.html">ModelCar Pipeline Deployment</a>
