deploy: 63fbabfa83ebac42d486d101f057e2f755a0d2f8

--- a/genai-amep/3/index.html
+++ b/genai-amep/3/index.html
@@ -48,10 +48,10 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter1/index.html">Platform Preparation</a>
+    <a class="nav-link" href="chapter1/index.html">Platform preparation</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <span class="nav-text">xref:infrastructure-setup.adoc</span>
+    <a class="nav-link" href="chapter1/infrastructure-setup.html">Infrastructure setup</a>
   </li>
 </ul>
   </li>
@@ -295,7 +295,7 @@ Gather raw JSON data from object storage (S3) and use a Jupyter Notebook to gene
 </div>
 </div>
 <nav class="pagination">
-  <span class="next"><a href="chapter1/index.html">Platform Preparation</a></span>
+  <span class="next"><a href="chapter1/index.html">Platform preparation</a></span>
 </nav>
 </article>
   </div>
