deploy: ef406cc5b6bb02673957b4dd913c0a2375d0ab61

--- a/genai-amep/3/index.html
+++ b/genai-amep/3/index.html
@@ -53,27 +53,14 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter1/infrastructure-setup.html">Infrastructure setup</a>
   </li>
-</ul>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter2/index.html">Model Deployment</a>
-<ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/deployment-overview.html">Deployment Overview</a>
+    <a class="nav-link" href="chapter1/modelcar-pipeline.html">ModelCar Pipeline Deployment</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#infrastructure-setup.adoc">Infrastructure Setup</a>
+    <a class="nav-link" href="chapter1/evaluation-pipeline.html">Evaluation Pipeline Deployment</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/modelcar-pipeline.html">ModelCar Pipeline Deployment</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/evaluation-pipeline.html">Evaluation Pipeline Deployment</a>
+    <a class="nav-link" href="chapter1/results-analysis.html">Results Analysis and Visualization</a>
   </li>
 </ul>
   </li>
@@ -158,7 +145,7 @@
 <h2 id="_who_is_this_for"><a class="anchor" href="#_who_is_this_for"></a>🎯 Who Is This For?</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We built this specifically for the people building atoken generation platform used to build Gen AI powered applications:</p>
+<p>We built this specifically for the people building a token generation platform used to build Gen AI powered applications:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -282,16 +269,7 @@ Gather raw JSON data from object storage (S3) and use a Jupyter Notebook to gene
 <div class="sect1">
 <h2 id="_lets_get_started"><a class="anchor" href="#_lets_get_started"></a>Let&#8217;s Get Started</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>Ready to build the foundation?</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="#phase-1:index.adoc" class="xref unresolved">Start with Phase 1: Package &amp; Register</a></p>
-</li>
-</ul>
-</div>
+
 </div>
 </div>
 <nav class="pagination">
