deploy: cfde0f3ddecc9b09e7ce88bd2177039de96ed7b1

--- a/genai-amep/3/index.html
+++ b/genai-amep/3/index.html
@@ -145,7 +145,7 @@
 <h2 id="_who_is_this_for"><a class="anchor" href="#_who_is_this_for"></a>🎯 Who Is This For?</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We built this specifically for the people building a token generation platform used to build Gen AI powered applications:</p>
+<p>We built this specifically for the people building a token generation platform used by Gen AI powered applications:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -246,7 +246,7 @@ Gather raw JSON data from object storage (S3) and use a Jupyter Notebook to gene
 <h2 id="_prerequisites"><a class="anchor" href="#_prerequisites"></a>🚀 Prerequisites</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Before starting Phase 1, ensure you have the following:</p>
+<p>Before starting, ensure you have the following:</p>
 </div>
 <div class="ulist checklist">
 <ul class="checklist">
