deploy: e598d8a4188d2490afd1eb568cc9339c4381f895

--- a/genai-amep/3/index.html
+++ b/genai-amep/3/index.html
@@ -57,6 +57,9 @@
     <a class="nav-link" href="chapter1/modelcar-pipeline.html">ModelCar Pipeline Deployment</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter1/benchmark-pipeline.html">Benchmark Pipeline Deployment</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter1/evaluation-pipeline.html">Evaluation Pipeline Deployment</a>
   </li>
   <li class="nav-item" data-depth="2">
